--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -843,6 +843,9 @@
   "boilerplate.containers.Payroll.search": "بحث",  
   "boilerplate.containers.Payroll.fromdate": "من تاريخ",
   "boilerplate.containers.Payroll.todate":"الى تاريخ",
+  "boilerplate.containers.Payroll.type": "النوع",  
+  "boilerplate.containers.Payroll.title": "الموضوع",
+  "boilerplate.containers.Payroll.details":"التفاصيل",
   
   
   "boilerplate.containers.Payroll.Setting.parentName":"القائمة الرئيسية",
@@ -906,6 +909,13 @@
   "boilerplate.containers.Payroll.HumanResources.oldJob":"الوظيفة السابقة",    
   "boilerplate.containers.Payroll.HumanResources.PromotionsCreateTitle":"اضافة ترقية",  
   "boilerplate.containers.Payroll.HumanResources.PromotionsUpdateTitle":"تعديل ترقية", 
+  "boilerplate.containers.Payroll.HumanResources.ExplanationEditTitle":"تعديل الاقتراحات والشكاوى",   
+  "boilerplate.containers.Payroll.HumanResources.hrLetterLang":"لغة الخطاب",   
+  "boilerplate.containers.Payroll.HumanResources.expDirectedTo":"موجه الى",   
+  "boilerplate.containers.Payroll.HumanResources.hrLetterDate":"تاريخ الخطاب", 
+  "boilerplate.containers.Payroll.HumanResources.response":"الرد", 
+  
+  
   
   
   
