--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -846,6 +846,11 @@
   "boilerplate.containers.Payroll.type": "Type",  
   "boilerplate.containers.Payroll.title": "Title",
   "boilerplate.containers.Payroll.details":"Details",
+  "boilerplate.containers.Payroll.location":"Location",     
+  "boilerplate.containers.Payroll.hrLetterLang":"Letter Language",   
+  "boilerplate.containers.Payroll.directedTo":"Directed to",   
+  "boilerplate.containers.Payroll.hrLetterDate":"Letter Date", 
+  "boilerplate.containers.Payroll.meetingReq":"Meeting Request", 
   
   
   
@@ -912,10 +917,7 @@
   "boilerplate.containers.Payroll.HumanResources.oldJob":"Prev Job",   
   "boilerplate.containers.Payroll.HumanResources.PromotionsCreateTitle":"Add Promotions",  
   "boilerplate.containers.Payroll.HumanResources.PromotionsUpdateTitle":"Update Promotions",   
-  "boilerplate.containers.Payroll.HumanResources.ExplanationEditTitle":"Update Explanation",    
-  "boilerplate.containers.Payroll.HumanResources.hrLetterLang":"Letter Language",   
-  "boilerplate.containers.Payroll.HumanResources.expDirectedTo":"Directed to",   
-  "boilerplate.containers.Payroll.HumanResources.hrLetterDate":"Letter Date", 
+  "boilerplate.containers.Payroll.HumanResources.ExplanationEditTitle":"Update Explanation", 
   "boilerplate.containers.Payroll.HumanResources.response":"Response", 
   
   
