finish jobs  pages

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -850,7 +850,10 @@
   "boilerplate.containers.Payroll.hrLetterLang":"لغة الخطاب",   
   "boilerplate.containers.Payroll.directedTo":"موجه الى",   
   "boilerplate.containers.Payroll.hrLetterDate":"تاريخ الخطاب", 
-  "boilerplate.containers.Payroll.meetingReq":"طلب ميتنج", 
+  "boilerplate.containers.Payroll.meetingReq":"طلب ميتنج",
+  "boilerplate.containers.Payroll.add": "اضافة",
+  "boilerplate.containers.Payroll.yes": "نعم",
+  "boilerplate.containers.Payroll.no": "لا", 
   
   
   
@@ -932,6 +935,36 @@
   "boilerplate.containers.Payroll.Employee.personal.organization":"القسم",
   "boilerplate.containers.Payroll.Employee.personal.reportto":"المدير المباشر",
   "boilerplate.containers.Payroll.Employee.personal.jobname":" الوظيفة",
-  "boilerplate.containers.Payroll.Employee.personal.isinsured":"مؤمن عليه"
+  "boilerplate.containers.Payroll.Employee.personal.isinsured":"مؤمن عليه",
+  "boilerplate.containers.Payroll.MainData.codes.id": "كود",
+  "boilerplate.containers.Payroll.MainData.codes.arName": "الاسم ع",
+  "boilerplate.containers.Payroll.MainData.codes.enName": "الاسم بالانجليزية",
+  "boilerplate.containers.Payroll.MainData.codes.parent": "الوظيفة الرئيسية",
+  "boilerplate.containers.Payroll.MainData.codes.parentName": "الوظيفة الرئيسية",
+  "boilerplate.containers.Payroll.MainData.codes.jobnature": "طبيعة الوظيقة",
+  "boilerplate.containers.Payroll.MainData.codes.jobtype": "نوع الوظيفة",
+  "boilerplate.containers.Payroll.MainData.codes.sanclevel": "نوع الجزاء",
+  "boilerplate.containers.Payroll.MainData.codes.sancLevelName": "نوع الجزاء",
+  "boilerplate.containers.Payroll.MainData.codes.sancLevelArName": "نوع الجزاء ع",
+  "boilerplate.containers.Payroll.MainData.codes.jobcode": "كود الوظيفة",
+  "boilerplate.containers.Payroll.MainData.codes.medicalinsurancestartday": "تاريخ التأمين الطبى",
+  "boilerplate.containers.Payroll.MainData.codes.isleadership": "وظيفة قيادية",
+  "boilerplate.containers.Payroll.MainData.codes.actions": "الإجراءات",
+  "boilerplate.containers.Payroll.MainData.codes.deleteMessage": "هل أنت متأكد أنك تريد حذف",
+  "boilerplate.containers.Payroll.MainData.codes.delete": "حذف",
+  "boilerplate.containers.Payroll.MainData.codes.createJob": "إنشاء وظيفة" ,
+  "boilerplate.containers.Payroll.MainData.codes.editJob": "تعديل الوظيفة",
+  "boilerplate.containers.Payroll.MainData.codes.worknature": "طبيعة العمل",
+  "boilerplate.containers.Payroll.MainData.codes.bank": "البنك",
+  "boilerplate.containers.Payroll.MainData.codes.add": "اضافة جديد",
+  "boilerplate.containers.Payroll.MainData.codes.ADD": "اضافة",
+  "boilerplate.containers.Payroll.MainData.codes.TransactionsTypes": "أنواع المعاملات",
+  "boilerplate.containers.Payroll.MainData.codes.Upload": "رفع ملف",
+  "boilerplate.containers.Payroll.MainData.codes.Submit": "إرسال",
+  "boilerplate.containers.Payroll.MainData.codes.SubmitTooltip": "قم باستيراد ملف اكسيل واختر نوع المعاملات المطلوب إرسالها",
+  "boilerplate.containers.Payroll.MainData.codes.Reset": "إعادة تعيين",
+  "boilerplate.containers.Payroll.MainData.codes.Import": "استيراد",
+  "boilerplate.containers.Payroll.MainData.codes.SubmitEmployeeTooltip": "قم باستيراد ملف إكسل لإرساله",
+  "boilerplate.containers.Payroll.MainData.codes.Download": "تحميل"
   
 }
