--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -823,7 +823,7 @@
   "boilerplate.components.tables.codes.course": "اسم الدورة",
   "boilerplate.components.tables.codes.startdate": "من تاريخ",
   "boilerplate.components.tables.codes.enddate": "الى تاريخ",
-  "boilerplate.components.tables.codes.araddress": "الهنوان بالعربية",
+  "boilerplate.components.tables.codes.araddress": "العنوان بالعربية",
   "boilerplate.components.tables.codes.enaddress": "العنوان بالانجليزية",
   "boilerplate.components.tables.codes.city": "المدينة",
   "boilerplate.components.tables.codes.elementName": "العنصر", 
@@ -831,6 +831,28 @@
   "boilerplate.components.tables.codes.value": "القيمة",
   "boilerplate.components.tables.codes.PenaltyTypeName": "نوع الجزاء",
   "boilerplate.components.tables.codes.PenaltyValue": "القيمة",
+
+
+  "boilerplate.components.tables.codes.fromdate":  "من تاريخ",
+  "boilerplate.components.tables.codes.todate": "الى تاريخ",
+  "boilerplate.components.tables.codes.companyname": "اسم الشركه",
+  "boilerplate.components.tables.codes.monthno": "عدد الشهور",
+
+ 
+  "boilerplate.components.tables.codes.bankBranchNo": "رقم الفرع",
+  "boilerplate.components.tables.codes.iban":"Ibn",
+  "boilerplate.components.tables.codes.bnkAcc": "رقم الحساب",
+  "boilerplate.components.tables.codes.bnkEmpCode":"المود البنكى",
+  "boilerplate.components.tables.codes.swiftCode": "swift Code",
+
+  "boilerplate.components.tables.codes.qualification":  "المؤهل",
+  "boilerplate.components.tables.codes.qualificationRelease": "جهة التخرج",
+  "boilerplate.components.tables.codes.qualificationDate":"تاريخ الصدور",
+  "boilerplate.components.tables.codes.grade": "التقدير",
+  "boilerplate.components.tables.codes.membershipNo":"رقم عضوية النفابة",
+
+
+
 
   "boilerplate.containers.Payroll.save": "حفظ",
   "boilerplate.containers.Payroll.cancel": "الغاء",
@@ -903,6 +925,30 @@
   "boilerplate.containers.Payroll.Employee.personal.organization":"القسم",
   "boilerplate.containers.Payroll.Employee.personal.reportto":"المدير المباشر",
   "boilerplate.containers.Payroll.Employee.personal.jobname":" الوظيفة",
-  "boilerplate.containers.Payroll.Employee.personal.isinsured":"مؤمن عليه"
+  "boilerplate.containers.Payroll.Employee.personal.isinsured":"مؤمن عليه",
+
+
+  "boilerplate.containers.Payroll.Employee.car.carModel":"موديل السيارة",
+  "boilerplate.containers.Payroll.Employee.car.manufactureYear":"سنة الصنع",
+  "boilerplate.containers.Payroll.Employee.car.hasLicense":"يوجد رخصة قيادة",
+  "boilerplate.containers.Payroll.Employee.car.licenseNo":"رقم الرخصة",
+  "boilerplate.containers.Payroll.Employee.car.trafficUnit":"وحدة المرور",
+  "boilerplate.containers.Payroll.Employee.car.licenseGrade":"درجة الرخصة",
+
+
+  "boilerplate.containers.Payroll.Employee.job.hiringDate":"تاريخ الالتحاق بالعمل",
+  "boilerplate.containers.Payroll.Employee.job.contractEndDate":"تاريح انتهاء التعاقد",
+  "boilerplate.containers.Payroll.Employee.job.contractStartDate":"تاريح بداية التعاقد",
+  "boilerplate.containers.Payroll.Employee.job.job":"الوظيفة",
+  "boilerplate.containers.Payroll.Employee.job.joblevel":"المستوى الوظيفى",
+  "boilerplate.containers.Payroll.Employee.job.hiringSource":"مصدر التعيين",
+  "boilerplate.containers.Payroll.Employee.job.isKinship":"يوجد صلة قرابة",
+  "boilerplate.containers.Payroll.Employee.job.kinshipLink":"صلة قرابة",
+  "boilerplate.containers.Payroll.Employee.job.kinshipEmp":"اسم القريب",
+  "boilerplate.containers.Payroll.Employee.job.hasAlternativeEmp":"لدية موظف بديل",
+  "boilerplate.containers.Payroll.Employee.job.contractType":"نوع التعاقد",
+  "boilerplate.containers.Payroll.Employee.job.notHasMission":"لا يصرح له بمأموريات",
+  "boilerplate.containers.Payroll.Employee.job.ruleTemplate":"نموذج الفواعد"
+
   
 }
