--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -901,8 +901,29 @@
   "boilerplate.containers.Payroll.Employee.personal.organization":"Organization",
   "boilerplate.containers.Payroll.Employee.personal.reportto":"Report To",
   "boilerplate.containers.Payroll.Employee.personal.jobname":"Job",
-  "boilerplate.containers.Payroll.Employee.personal.isinsured":"Insured"
-  
+  "boilerplate.containers.Payroll.Employee.personal.isinsured":"Insured",
+
+  "boilerplate.containers.Payroll.Employee.car.carModel":"Car Model",
+  "boilerplate.containers.Payroll.Employee.car.manufactureYear":"Manufacture Year",
+  "boilerplate.containers.Payroll.Employee.car.hasLicense":"Has License",
+  "boilerplate.containers.Payroll.Employee.car.licenseNo":"License No",
+  "boilerplate.containers.Payroll.Employee.car.trafficUnit":"Traffic Unit",
+  "boilerplate.containers.Payroll.Employee.car.licenseGrade":"License Grade",
+
+
+  "boilerplate.containers.Payroll.Employee.job.hiringDate":"Hiring Date",
+  "boilerplate.containers.Payroll.Employee.job.contractEndDate":"Contract End Date",
+  "boilerplate.containers.Payroll.Employee.job.contractStartDate":"Contract Start Date",
+  "boilerplate.containers.Payroll.Employee.job.job":"Job",
+  "boilerplate.containers.Payroll.Employee.job.joblevel":"Job Level",
+  "boilerplate.containers.Payroll.Employee.job.hiringSource":"Hiring Source",
+  "boilerplate.containers.Payroll.Employee.job.isKinship":"Is Kinship",
+  "boilerplate.containers.Payroll.Employee.job.kinshipLink":"Kinship Link",
+  "boilerplate.containers.Payroll.Employee.job.kinshipEmp":"kinship Name",
+  "boilerplate.containers.Payroll.Employee.job.hasAlternativeEmp":"Has AlternativeEmp",
+  "boilerplate.containers.Payroll.Employee.job.contractType":"Contract Type",
+  "boilerplate.containers.Payroll.Employee.job.notHasMission":"Not Has Mission",
+  "boilerplate.containers.Payroll.Employee.job.ruleTemplate":"Rule Template"
    
    
 }
