Add total in manpowersetting

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -866,7 +866,8 @@
   "boilerplate.containers.Payroll.price": "Price",   
   "boilerplate.containers.Payroll.count": "Count", 
   "boilerplate.containers.Payroll.isStop": "Is Stop",   
-  "boilerplate.containers.Payroll.chooseJob": "Choose Job",
+  "boilerplate.containers.Payroll.chooseJob": "Choose Job",  
+  "boilerplate.containers.Payroll.total": "Total",
   
   
   
