--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -888,6 +888,7 @@
   "boilerplate.containers.Payroll.count": "العدد", 
   "boilerplate.containers.Payroll.isStop": "ايقاف التعامل المالى", 
   "boilerplate.containers.Payroll.chooseJob": "اختر وظيفة",
+  "boilerplate.containers.Payroll.total": "الاجمالى",
   
   
   
